--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,19 @@
     "version": "1.0.0",
     "type": "module",
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "preview": "vite preview"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
     },
     "dependencies": {
-      "axios": "^1.7.2",
-      "react": "^18.3.1",
-      "react-dom": "^18.3.1"
+        "axios": "^1.7.2",
+        "pdfjs-dist": "^2.16.105",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-pdf": "^10.2.0"
     },
     "devDependencies": {
-      "@vitejs/plugin-react": "^4.3.1",
-      "vite": "^5.4.0"
+        "@vitejs/plugin-react": "^4.3.1",
+        "vite": "^5.4.0"
     }
-  }
+}
